--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <h1>Furry Squid Game</h1>
 <p>Look it Up</p>
 <a href="https://lh3.googleusercontent.com/VEZLl1RNogMJZUXAw-TSf4njZSnjI9qoK6d7mh-hOmLg9E8UqJg89-Ae_UGYkY-JUCBhDpEqjRA3WecNg5-_vf-08B5sCIjVeNWNUMYlYWBuWovun_kkDj-0L0VakLwpJOyYJqfD=s224-p-k?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/VEZLl1RNogMJZUXAw-TSf4njZSnjI9qoK6d7mh-hOmLg9E8UqJg89-Ae_UGYkY-JUCBhDpEqjRA3WecNg5-_vf-08B5sCIjVeNWNUMYlYWBuWovun_kkDj-0L0VakLwpJOyYJqfD=s224-p-k" /> </a>
+  <a href="https://lh3.googleusercontent.com/rpY-WlU-csv6qZiBtwQ-pdttj0jfF9089fqUV3VaAY2JyeVV7CaYocVRIX9V7w3C5boPh3_IlOMt3eVRk2WZgo86H4LQlMWdcyXf0A-48BdcvKxza11bkJ_WkIgNQ-x5mKwt24fa=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/rpY-WlU-csv6qZiBtwQ-pdttj0jfF9089fqUV3VaAY2JyeVV7CaYocVRIX9V7w3C5boPh3_IlOMt3eVRk2WZgo86H4LQlMWdcyXf0A-48BdcvKxza11bkJ_WkIgNQ-x5mKwt24fa=w600-h315-p-k" /> </a>
 </body>
 </html>
