--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
-<body style="background-colour:blue;">
-
-<h1>Furry Squid Game</h1>
-<p>Look it Up</p>
-<p>Big Willy C is more than a furry</p>
-<a href="https://lh3.googleusercontent.com/VEZLl1RNogMJZUXAw-TSf4njZSnjI9qoK6d7mh-hOmLg9E8UqJg89-Ae_UGYkY-JUCBhDpEqjRA3WecNg5-_vf-08B5sCIjVeNWNUMYlYWBuWovun_kkDj-0L0VakLwpJOyYJqfD=s224-p-k?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/VEZLl1RNogMJZUXAw-TSf4njZSnjI9qoK6d7mh-hOmLg9E8UqJg89-Ae_UGYkY-JUCBhDpEqjRA3WecNg5-_vf-08B5sCIjVeNWNUMYlYWBuWovun_kkDj-0L0VakLwpJOyYJqfD=s224-p-k" /> </a>
-<a href="https://yuck.ga/f"  
-<a href="https://lh3.googleusercontent.com/rpY-WlU-csv6qZiBtwQ-pdttj0jfF9089fqUV3VaAY2JyeVV7CaYocVRIX9V7w3C5boPh3_IlOMt3eVRk2WZgo86H4LQlMWdcyXf0A-48BdcvKxza11bkJ_WkIgNQ-x5mKwt24fa=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/rpY-WlU-csv6qZiBtwQ-pdttj0jfF9089fqUV3VaAY2JyeVV7CaYocVRIX9V7w3C5boPh3_IlOMt3eVRk2WZgo86H4LQlMWdcyXf0A-48BdcvKxza11bkJ_WkIgNQ-x5mKwt24fa=w600-h315-p-k" /> </a>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>FlappyBird</title>
+    <link rel="stylesheet" href="style.css" > 
+    <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
+</head>
+<body>
+    <canvas id="canvas" width="276" height="414"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
