--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FlappyBird</title>
+    <title>FurryBird</title>
     <link rel="stylesheet" href="style.css" > 
     <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <canvas id="canvas" width="276" height="414"></canvas>
+    <canvas id="canvas" width="1280" height="720"></canvas>
     <script src="game.js"></script>
 </body>
 </html>
