--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 
 <h1>YUCKGA! - The sound we all make when we see Big Willy C in his Big Willy Furry Suit</h1>
-<p><a href="https://yuck.ga/twomad/f">Play Furry Bird</a></p>
+<p><a href="https://yuck.ga/f">Play Furry Bird</a></p>
 </body>
 </html>
