--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
 <h1>YUCKGGAA!</h1>
 <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.</p>
-
+<a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
 </body>
 </html>
