--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>YUCKGGAA!</h1>
-<p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.</p>
-<a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
-<a href="https://yuck.ga/p/index.html">Play Furry Man</a>
-</body>
+  <head>
+    <title>Furry Squid Game</title>
+  </head>
+  <body>
+    <h1>YUCKGGAA!</h1>
+    <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.</p>
+    <a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
+    <a href="https://yuck.ga/p/index.html">Play Furry Man</a>
+  </body>
 </html>
