--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   <body>
     <h1>YUCKGGAA!</h1>
     <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.</p>
-    <a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
+    <a href="https://yuck.ga/f/index.html">Play Furry Bird (Works on Touch Screen)</a>
     <br>
-    <a href="https://yuck.ga/p/index.html">Play Furry Man</a>
+    <a href="https://yuck.ga/p/index.html">Play Furry Man (Keyboard Required, but still check it out, It's epic without the keyboard!)</a>
+    <h2>Announcements</h2>
+    <p>Website Has released 20th January 2022</p>
+    <br>
+    <p>A Prototype of Maybe has released 19th January 2022</p>
+    <br>
+    <p>Yes Has Released :)  19th January 2022</p>
+    <br>
+    <p>No Has Leaked :(  18th January 2022</p>
   </body>
 </html>
