--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <a href="https://yuck.ga/f/index.html">Play Furry Bird (Works on Touch Screen)</a>
     <br>
     <a href="https://yuck.ga/p/index.html">Play Furry Man (Keyboard Required, but still check it out, It's epic without the keyboard!)</a>
+    <br>
+    <a href="https://yuck.ga/t/index.html">Play Furry Tetris</a>
     <h2>Announcements</h2>
     <p>Website Has released 20th January 2022</p>
     <br>
