--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <p>Yes Has Released :)  19th January 2022</p>
     <br>
     <p>No Has Leaked :(  18th January 2022</p>
+    <br>
+    <p>21 and 69 are coming for the world to seeeeee</p>
   </body>
 </html>
