--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>Furry Squid Game</title>
   </head>
   <body>
-    <h1>YUCKGGAA!</h1>
-    <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.</p>
+    <h1>YUCKGGAA!
+    (that's enough. ed.)</h1>
+    <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
+    (that's too silly. ed.)</p>
     <a href="https://yuck.ga/f/index.html">Play Furry Bird (Works on Touch Screen)</a>
     <br>
     <a href="https://yuck.ga/p/index.html">Play Furry Man (Keyboard Required, but still check it out, It's epic without the keyboard!)</a>
@@ -23,7 +25,7 @@
     <p>No Has Leaked :(  18th January 2022</p>
     <br>
     <p>21 and 69 are coming for the world to seeeeee</p>
-    <p>I am sorry but your mom has been caught 
+    <p>I am sorry but your mom has been caught on my website;
     TRY OUT MY WEBSITE https://alwaysjudgeabookbyitscover.com/</p>
   </body>
 </html>
