--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Furry Squid Game</title>
   </head>
   <body>
-    <h1>YUCKGGAA!
+    <h1>YUCKGGAA!<br>
     (that's enough. ed.)</h1>
     <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
     (that's too silly. ed.)</p>
