--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <title>Furry Squid Game</title>
   </head>
   <body>
-    <h1>YUCKGGAA!<br>
-    (that's enough. ed.)</h1>
+    <h1>YUCKGA!</h1>
+    <h2>(that's enough. ed.)</h2>
+    <h3>This website was made with TriangleSpace.com, the sponsor of this website.</h3>
     <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
     (that's too silly. ed.)</p>
-    <a href="https://yuck.ga/f/index.html">Play Furry Bird (Works on Touch Screen)</a>
+    <a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
     <br>
-    <a href="https://yuck.ga/p/index.html">Play Furry Man (Keyboard Required, but still check it out, It's epic without the keyboard!)</a>
+    <a href="https://yuck.ga/p/index.html">Play Furry Man</a>
     <br>
     <a href="https://yuck.ga/t/index.html">Play Furry Tetris</a>
     <br>
