--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <h1>YUCKGA!</h1>
-    <h2>(that's enough. ed.)</h2>
+    
+    <a>(that's enough. ed.)</p>
+    
     <h3>This website was made with TriangleSpace.com, the sponsor of this website.</h3>
     <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
     (that's too silly. ed.)</p>
