--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <a>(that's enough. ed.)</p>
     
     <h3>This website was made with TriangleSpace.com, the sponsor of this website.</h3>
-    <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
-    (that's too silly. ed.)</p>
+    <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.</p>
+
+    <a (that's too silly. ed.)</p>
     <a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
     <br>
     <a href="https://yuck.ga/p/index.html">Play Furry Man</a>
