--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2>(that's enough. ed.)</h2>
     <h3>This website was made with TriangleSpace.com, the sponsor of this website</h3>
     <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
-    (that's too silly. ed.)</p>
+    (Bertie's Mum)</p>
     <a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
     
     <a href="https://yuck.ga/p/index.html">   Play Furry Man</a>
