--- a/c/index.html
+++ b/c/index.html
@@ -27,7 +27,7 @@
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Simple JavaScript Calculator" />
     <meta property="og:description"
-        content="Simple JavaScript Calculator by Harsh Trivedi" />
+        content="Simple JavaScript Calculator by Big Willy C"/>
     <meta property="og:image"
         content="https://raw.github.com/harsh98trivedi/Simple-JavaScript-Calculator/master/meta.jpg" />
     <meta property="og:url" content="https://harsh98trivedi.github.io/Simple-JavaScript-Calculator/" />
