--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <br>
     <img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
     <h2>Announcements</h2>
+    <p>The websit has more videos now and also a calulator!</p>
+    <br>
+    <p>The final version of Maybe has released!</p>
+    <br>
     <p>Website Has released 20th January 2022</p>
     <br>
     <p>A Prototype of Maybe has released 19th January 2022</p>
