--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
     (Bertie's Mum)</p>
     <h2>(that's enough. ed.)</h2>
-    <h3>This website was made possible by TriangleSpace.com, the sponsor of this website</h3>
+    <h3>This website was made possible by TriangleSpace.com, the sponsor of this website.</h3>
     <a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
     <br>
     <a href="https://yuck.ga/p/index.html">   Play Furry Man</a>
@@ -22,7 +22,7 @@
     <br>
     <img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
     <h2>Announcements</h2>
-    <p>The websit has more videos now and also a calulator!</p>
+    <p>The website has more videos now and also a calulator!</p>
     <br>
     <p>The final version of Maybe has released!</p>
     <br>
