--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
     <p>21 and 69 are coming for the world to seeeeee</p>
     <p>I am sorry but your mom has been caught on my website;
     TRY OUT MY WEBSITE https://alwaysjudgeabookbyitscover.com/</p>
+    <br>
+    <div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
+                target="_blank" href="https://harsh98trivedi.github.io">Big Willy C</a></div>
+		</div>
   </body>
 </html>
