--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     (Bertie's Mum)</p>
     <h2>(that's enough. ed.)</h2>
     <h3>This website was made possible by TriangleSpace.com, the sponsor of this website.</h3>
-    <a href="https://yuck.ga/f/index.html">Play Furry Bird</a>
+    <a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     <br>
-    <a href="https://yuck.ga/p/index.html">   Play Furry Man</a>
+    <a href="https://yuck.ga/p/index.html">Play Furry Man</a>
     <br>
-    <a href="https://yuck.ga/t/index.html">   Play Furry Tetris</a>
+    <a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris</a>
     <br>
     <br>
     <a href="https://yuck.ga/videos.html">Watch Videos</a>
     <br>
-    <a href="https://yuck.ga/c/index.html">   Use a Calculator</a>
+    <a href="https://yuck.ga/c/index.html">Open <b>Furry Calc</b></a>
     <br>
     <img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
     <h2>Announcements</h2>
