--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h3>This website was made possible by TriangleSpace.com, the sponsor of this website.</h3>
     <a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     <br>
-    <a href="https://yuck.ga/p/index.html">Play Furry Man</a>
+    <a href="https://yuck.ga/p/index.html">Play <b>Furry Man</b></a>
     <br>
     <a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris</a>
     <br>
     <br>
-    <a href="https://yuck.ga/videos.html">Watch Videos</a>
+    <a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
     <br>
     <a href="https://yuck.ga/c/index.html">Open <b>Furry Calc</b></a>
     <br>
