--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <h1>YUCKGA!</h1>
-    <p>The Sound We All Make When We See Big Willy C With His Big Willy Furry Suit.
+    <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit.
     (Bertie's Mum)</p>
     <h2>(that's enough. ed.)</h2>
     <h3>This website was made possible by TriangleSpace.com, the sponsor of this website.</h3>
     <a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     <br>
-    <a href="https://yuck.ga/p/index.html">Play <b>Furry Man</b></a>
+    <a href="https://yuck.ga/p/index.html">Play <b>Furry</b> Man</a>
     <br>
     <a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris</a>
     <br>
