--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <br>
     <a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris</a>
     <br>
+    <a href="https://yuck.ga/2048/index.html"><b>Play Furry</b> 2048</a>
+    <br>
     <br>
     <a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
     <br>
