--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Furry Squid Game</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
-  <body style="background-color:powderblue;">
+  <body style="background-color:lightseagreen;">
     <h1>YUCKGA!</h1>
     <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit.
     (Bertie's Mum)</p>
