--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit.
     (Bertie's Mum)</p>
     <h2>(that's enough. ed.)</h2>
-    <h3>This website was made possible by TriangleSpace.com, the sponsor of this website.</h3>
+    <h3>This website was fully coded by me - not by some weird YouTube sponsor lovey dovey easy peasy furry weasy website builder. Also thanks to freeves445 (ignore the 445, he's not edp.) for getting this site unblocked so I could then add this stuff to it.</h3>
     <a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     <br>
     <a href="https://yuck.ga/p/index.html">Play <b>Furry</b> Man</a>
