--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="https://yuck.ga/2048/index.html">Play <b>Furry</b> 2048</a>
     <br>
     <br>
+	  <a href="https://yuck.ga/f2/index.html">Play <b>Flappy Bird</b></a>
     <a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
     <br>
     <a href="https://yuck.ga/c/index.html">Open <b>Furry Calc</b></a>
