--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Furry Squid Game</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body style="background-color:whitesmoke;">
     <h1>YUCKGA!</h1>
