--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <br>
     <a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris</a>
     <br>
-    <br>
-    <a href="https://yuck.ga/2048/index.html">Play <b>Furry</b> 2048</a>
+    <a href="https://yuck.ga/f2048/index.html">Play <b>Furry</b> 2048</a>
     <br>
     <br>
     <a href="https://yuck.ga/f2/index.html">Play <b>Flappy Bird</b></a>
+    <br>
+    <a href="https://yuck.ga/2048/index.html">Play <b>2048</b></a>
     <br>
     <br>
     <a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
