--- a/f2048/index.html
+++ b/f2048/index.html
@@ -51,5 +51,8 @@
 			<i id="simulate" class="fa fa-laptop" aria-hidden="true"></i>
 		</div>
 	</div>
+	<div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="/c/heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
+                target="_blank" href="https://harsh98trivedi.github.io">Big Willy C</a></div>
+		</div>
 </body>
 </html>
