--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     TRY OUT MY WEBSITE https://alwaysjudgeabookbyitscover.com/</p>
     <br>
     <div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="/c/heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
-                target="_blank" href="https://e621.net">Big Willy C</a></div>
+                target="_blank" href="https://e621.net">Small Willy C</a></div>
 		</div>
   </body>
 </html>
