--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <br>
     <a href="https://yuck.ga/2048/index.html">Play <b>2048</b></a>
     <br>
+    <a href="https://yuck.ga/2048mod/index.html">Play <b>2048 Modded</b></a>
+    <br>
     <br>
     <a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
     <br>
