--- a/2048mod/index.html
+++ b/2048mod/index.html
@@ -47,9 +47,9 @@
     </p>
     <hr>
     <p>
-      My Github: <a href="https://github.com/CyberZHG/">CyberZHG</a> <br>
-      Contributors: <a href="https://github.com/jiangtyd/">jiangtyd</a>|
-      <a href="https://github.com/allbinbin/">allbinbin</a>
+      My Github: <a href="e621.net">Definitley a link to my github.</a> <br>
+      Contributors: <a href="e621.net">Definitley a link to the contributers</a>
+      <a href="e621.net">e621.net</a>
     </p>
     <hr/>
     <p>
