--- a/2048mod/index.html
+++ b/2048mod/index.html
@@ -22,7 +22,7 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro" id="game-intro">Join the numbers and get to the <strong>2147483648 tile!</strong></p>
+    <p class="game-intro" id="game-intro">Scroll Down to get Mod Options!<strong>Furry</strong></p>
 
     <div class="game-container">
       <div class="game-message">
