--- a/2048mod/index.html
+++ b/2048mod/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2147483648</h1>
+      <h1 class="title">2048 Modded (With Furry addons!)</h1>
       <div class="scores-container">
         <div class="score-container" id="score-container">0</div>
         <div class="best-container">0</div>
