--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <br>
     <a href="https://yuck.ga/c/index.html">Open <b>Furry Calc</b></a>
     <br>
+   <a href="https://dustinbrett.com">Open FurryOS 10</a>
+    <br>
     <img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
     <h2>Announcements</h2>
     <p>The website has more videos now and also a calulator!</p>
