--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <br>
     <a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
     <br>
-    <a href="https://yuck.ga/c/index.html">Open <b>Furry Calc</b></a>
+    <a href="https://yuck.ga/c/index.html">Open <b>Furry</b> Calc</a>
     <br>
-   <a href="https://dustinbrett.com">Open FurryOS 10</a>
+    <a href="https://dustinbrett.com">Open <b>Furry</b>OS 10</a>
     <br>
     <img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
     <h2>Announcements</h2>
