--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   </head>
   <body style="background-color:whitesmoke;">
     <h1>YUCKGA!</h1>
-    <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit.
-    (Bertie's Mum)</p>
-    <h2>(that's enough. ed.)</h2>
-    <h3>This website was fully coded by me - not by some weird YouTube sponsor lovey dovey easy peasy furry weasy website builder. Also thanks to freeves445 (ignore the 445, he's not edp.) for getting this site unblocked so I could then add this stuff to it.</h3>
+    <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit.</p>
+    #<h2>(that's enough. ed.)</h2>
+    #<h3>This website was fully coded by me - not by some weird YouTube sponsor lovey dovey easy peasy furry weasy website builder. Also thanks to freeves445 (ignore the 445, he's not edp.) for getting this site unblocked so I could then add this stuff to it.</h3>
+    
+    <h3>Sussy Games</h3>  
     <a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     <br>
     <a href="https://yuck.ga/p/index.html">Play <b>Furry</b> Man</a>
@@ -19,6 +20,7 @@
     <a href="https://yuck.ga/f2048/index.html">Play <b>Furry</b> 2048</a>
     <br>
     <br>
+    <h3>Games</h3>
     <a href="https://yuck.ga/f2/index.html">Play <b>Flappy Bird</b></a>
     <br>
     <a href="https://yuck.ga/2048/index.html">Play <b>2048</b></a>
@@ -28,12 +30,18 @@
     <a href="https://yuck.ga/mine2048/index.html">Play <b>Minecraft 2048</b></a>  
     <br>
     <br>
+    <h3>Utilities</h3>
     <a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
     <br>
     <a href="https://yuck.ga/c/index.html">Open <b>Furry</b> Calc</a>
     <br>
+    <br>
+    <h3>Operating Systems [BETA]</h3>
     <a href="https://dustinbrett.com">Open <b>Furry</b>OS 10</a>
     <br>
+    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029745">Open AmogOS 1.4.0</a>
+    <br>
+    <a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.04</a>
     <img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
     <h2>Announcements</h2>
     <p>The website has more videos now and also a calulator!</p>
