--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029745">Open AmogOS 1.4.0</a>
     <br>
     <a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.04</a>
+    <br>
+    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029748">Open ArchLinux w/ XFCE</a>
+    <br>
+    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029750"
+    <br>
     <img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
     <h2>Announcements</h2>
     <p>The website has more videos now and also a calulator!</p>
