--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <br>
     <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029748">Open ArchLinux w/ XFCE</a>
     <br>
-    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029750"
+    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029750">Open Hannah Montana Linux</a>
+    <br>
+    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029755">Open PearOS 20.09</a>
     <br>
     <br>
     <h3>Utilities</h3>
