--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     <h3>Operating Systems [BETA]</h3>
     <a href="https://dustinbrett.com">Open <b>Furry</b>OS 10</a>
     <br>
-    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029745">Open AmogOS 1.4.0</a>
+    <a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
     <br>
-    <a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.04</a>
+    <a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.10</a>
     <br>
-    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029748">Open ArchLinux w/ XFCE</a>
+    <a href="https://distrotest.net/Arch%20Linux%20GUI/2021.10-b%20XFCE%20Pure">Open ArchLinux w/ XFCE</a>
     <br>
-    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029750">Open Hannah Montana Linux</a>
+    <a href="https://distrotest.net/Hannah%20Montana%20Linux/V2">Open Hannah Montana Linux</a>
     <br>
-    <a href="https://distrotest.net/index.php?module=systems&submodule=run&id=2029755">Open PearOS 20.09</a>
+    <a href="https://distrotest.net/PearOS/20.09">Open PearOS 20.09</a>
     <br>
     <br>
     <h3>Utilities</h3>
