--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     	<br>
     	<br>
     <h3>Operating Systems [BETA]</h3>
+	  <p>To use this: Go to Settings app, Tap Safari, and untoggle 'Block Pop-ups'.</p>
     	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10</a>
     	<br>
     	<a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
