--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 	  <p>To use this: Go to Settings app, Tap Safari, and untoggle 'Block Pop-ups'.</p>
     	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10</a>
     	<br>
+	<a href="https://windows96.net">Open Windows 96</a>
+	<br>
+	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000</a>
+	<br>
     	<a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
     	<br>
     	<a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.10</a>
