--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<br>
 	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000</a>
 	<br>
+	<a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=fedora33-riscv-xwin.cfg&graphic=1&mem=256">Open Fedora Linux 33</a>
     	<a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
     	<br>
     	<a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.10</a>
