--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     	<br>
     	<br>
     <h3>Operating Systems [BETA]</h3>
-	  <p>To use this: Go to Settings app, Tap Safari, and untoggle 'Block Pop-ups'.</p>
     	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10</a>
     	<br>
 	<a href="https://windows96.net">Open Windows 96</a>
@@ -38,6 +37,7 @@
 	<a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=fedora33-riscv-xwin.cfg&graphic=1&mem=256">Open Fedora Linux 33</a>
     	<a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
     	<br>
+	  <p>These below ones are not working yet on iPads :(</p>
     	<a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.10</a>
     	<br>
     	<a href="https://distrotest.net/Arch%20Linux%20GUI/2021.10-b%20XFCE%20Pure">Open ArchLinux w/ XFCE</a>
