--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     	<br>
     	<br>
     <h3>Operating Systems [BETA]</h3>
-    	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10</a>
+    	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10 (WORKS GREAT!)</a>
     	<br>
-	<a href="https://windows96.net">Open Windows 96</a>
+	<a href="https://windows96.net">Open Windows 96 (Works Great, just wait around 15 seconds)</a>
 	<br>
-	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000</a>
+	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000 (Works Great, just wait around 1 minute the first time)</a>
 	<br>
-	<a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=fedora33-riscv-xwin.cfg&graphic=1&mem=256">Open Fedora Linux 33</a>
-    	<a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
+	<a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=fedora33-riscv-xwin.cfg&graphic=1&mem=256">Open Fedora Linux 33 (Great, but requires keyboard AND mouse)</a>
+    	<p>These below ones are not working yet on iPads :(</p>
+	  <a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
     	<br>
-	  <p>These below ones are not working yet on iPads :(</p>
     	<a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.10</a>
     	<br>
     	<a href="https://distrotest.net/Arch%20Linux%20GUI/2021.10-b%20XFCE%20Pure">Open ArchLinux w/ XFCE</a>
