--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     	<br>
     	<br>
     <h3>Operating Systems [BETA]</h3>
-    	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10 (WORKS GREAT!)</a>
+    	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10 (WORKS GREAT ON TOUCH SCREEN!)</a>
     	<br>
-	<a href="https://windows96.net">Open Windows 96 (Works Great, just wait around 15 seconds)</a>
+	<a href="https://windows96.net">Open Windows 96 (Works Great on touch screen, just wait around 15 seconds)</a>
 	<br>
-	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000 (Works Great, just wait around 1 minute the first time)</a>
+	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000 (Works Great on touch screen, just wait around 1 minute the first time)</a>
 	<br>
 	<a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=fedora33-riscv-xwin.cfg&graphic=1&mem=256">Open Fedora Linux 33 (Great, but requires keyboard AND mouse)</a>
     	<p>These below ones are not working yet on iPads :(</p>
