--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Furry Squid Game</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:whitesmoke;">
     <h1>YUCKGA!</h1>
