--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <h3>Operating Systems [BETA]</h3>
     	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10 (WORKS GREAT ON TOUCH SCREEN!)</a>
     	<br>
+	<a href="https://aaronos.dev/AaronOS/aosBeta.php">Open AaronOS (Works great on touchscreen!)</a>
+	<br>
 	<a href="https://windows96.net">Open Windows 96 (Works Great on touch screen, just wait around 15 seconds)</a>
 	<br>
 	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000 (Works Great on touch screen, just wait around 1 minute the first time)</a>
