--- a/index.html
+++ b/index.html
@@ -25,7 +25,29 @@
     	<a href="https://yuck.ga/2048mod/index.html">Play <b>2048 Modded</b></a>
     	<br>
     	<a href="https://yuck.ga/mine2048/index.html">Play <b>Minecraft 2048</b></a>  
+    	  	<br>
     	<br>
+    <h3>Operating Systems [BETA]</h3>
+    	<a href="https://dustinbrett.com">Open <b>Furry</b>OS 10 (WORKS GREAT ON TOUCH SCREEN!)</a>
+    	<br>
+	<a href="https://aaronos.dev/AaronOS/aosBeta.php">Open AaronOS (Works great on touchscreen!)</a>
+	<br>
+	<a href="https://windows96.net">Open Windows 96 (Works Great on touch screen, just wait around 15 seconds)</a>
+	<br>
+	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000 (Works Great on touch screen, just wait around 1 minute the first time)</a>
+	<br>
+	<a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=fedora33-riscv-xwin.cfg&graphic=1&mem=256">Open Fedora Linux 33 (Great, but requires keyboard AND mouse)</a>
+    	<p>These below ones are not working yet on iPads :(</p>
+	  <a href="https://distrotest.net/AmogOS/1.4.0">Open AmogOS 1.4.0</a>
+    	<br>
+    	<a href="https://distrotest.net/Ubuntu/21.10">Open Ubuntu Linux 21.10</a>
+    	<br>
+    	<a href="https://distrotest.net/Arch%20Linux%20GUI/2021.10-b%20XFCE%20Pure">Open ArchLinux w/ XFCE</a>
+    	<br>
+    	<a href="https://distrotest.net/Hannah%20Montana%20Linux/V2">Open Hannah Montana Linux</a>
+    	<br>
+    	<a href="https://distrotest.net/PearOS/20.09">Open PearOS 20.09</a>
+	<br>
     	<br>
     <h3>Utilities</h3>
     	<a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
