--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Furry Squid Game</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="e621.css">
   </head>
     <h1>YUCKGA!</h1>
 	  <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit.</p>
