--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     	<a href="https://yuck.ga/p/index.html">Play <b>Furry</b> Man</a>
     	<br>
     	<a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris</a>
+	<br>
+	<a href="https://yuck.ga/tt/index.html">Play <b>Furry</b> Touchscreen Tetris (Use the other one if you have a keyboard)</a>
     	<br>
     	<a href="https://yuck.ga/f2048/index.html">Play <b>Furry</b> 2048</a>
     	<br>
