--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     	<br>
     	<a href="https://yuck.ga/p/index.html">Play <b>Furry</b> Man</a>
     	<br>
-    	<a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris</a>
+    	<a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris 1</a>
 	<br>
-	<a href="https://yuck.ga/tt/index.html">Play <b>Furry</b> Touchscreen Tetris (Use the other one if you have a keyboard)</a>
+	<a href="https://yuck.ga/tt/index.html">Play <b>Furry</b> Tetris 2</a>
     	<br>
     	<a href="https://yuck.ga/f2048/index.html">Play <b>Furry</b> 2048</a>
     	<br>
