--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     	<a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris 1</a>
 	<br>
 	<a href="https://yuck.ga/tt/index.html">Play <b>Furry</b> Tetris 2</a>
+	<br>
+	<a href="https://yuck.ga/t2/index.html">Play <b>Furry</b> Tetris 3</a>
     	<br>
     	<a href="https://yuck.ga/f2048/index.html">Play <b>Furry</b> 2048</a>
     	<br>
