--- a/index.html
+++ b/index.html
@@ -79,5 +79,7 @@
     <div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="/c/heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
                 target="_blank" href="https://e621.net">Small Willy C</a></div>
 		</div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
+     crossorigin="anonymous"></script>
   </body>
 </html>
