--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="e621.css">
   </head>
     <h1>YUCKGA!</h1>
-	  <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit.</p>
+	  <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit. (That's enough. Ed.)</p>
     <h3>Sussy Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     	<br>
