--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Furry Squid Game</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="e621.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
+     crossorigin="anonymous"></script>
   </head>
     <h1>YUCKGA!</h1>
 	  <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit. (That's enough. Ed.)</p>
