--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   </head>
     <h1>YUCKGA!</h1>
 	  <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit. (That's enough. Ed.)</p>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
+     crossorigin="anonymous"></script>
+<!-- Horizontal Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4429356582033898"
+     data-ad-slot="4891772010"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <h3>Sussy Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     	<br>
@@ -62,6 +74,18 @@
     	<a href="https://yuck.ga/c/index.html">Open <b>Furry</b> Calc</a>
     	<br>
     	<img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
+     crossorigin="anonymous"></script>
+<!-- Horizontal Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4429356582033898"
+     data-ad-slot="4891772010"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <h2>Announcements</h2>
     	<p>The website has more videos now and also a calulator!</p>
     	<br>
