--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
      crossorigin="anonymous"></script>
   </head>
+  <body>
     <h1>YUCKGA!</h1>
 	  <p>The Sound We <i>All</i> Make When We See Big Willy C With His Big Willy Furry Suit. (That's enough. Ed.)</p>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
