--- a/t/index.html
+++ b/t/index.html
@@ -41,7 +41,7 @@
 			<p id="level-label">1</p>
 		</div>
 
-		<button id="start-button">開始遊戲</button>
+		<button id="start-button">Play</button>
 
 		<div id="pause-menu" class="container invisible">
 			<p>暫停遊戲</p>
