--- a/t/index.html
+++ b/t/index.html
@@ -32,7 +32,7 @@
 		</div>
 
 		<div id="score-menu" class="container">
-			<p>分數:</p>
+			<p><b>Score</b>:</p>
 			<p id="score-label">0</p>
 		</div>
 
