--- a/t/index.html
+++ b/t/index.html
@@ -37,7 +37,7 @@
 		</div>
 
 		<div id="level-menu" class="container">
-			<p>等級:</p>
+			<p><b>High Score</b>:</p>
 			<p id="level-label">1</p>
 		</div>
 
