--- a/t/index.html
+++ b/t/index.html
@@ -44,8 +44,8 @@
 		<button id="start-button"><b>Play</b></button>
 
 		<div id="pause-menu" class="container invisible">
-			<p>暫停遊戲</p>
-			<button id="continue-button">繼續</button>
+			<p><b>Pause</b></p>
+			<button id="continue-button"><b>Continue</b></button>
 			<button id="home-button">主頁</button>
 			<button id="restart-button">重新開始</button>
 		</div>
