--- a/t/index.html
+++ b/t/index.html
@@ -46,17 +46,17 @@
 		<div id="pause-menu" class="container invisible">
 			<p><b>Pause</b></p>
 			<button id="continue-button"><b>Continue</b></button>
-			<button id="home-button">主頁</button>
-			<button id="restart-button">重新開始</button>
+			<button id="home-button"><b>Menu</b></button>
+			<button id="restart-button"><b>Restart</b></button>
 		</div>
 
 		<div id="game-over-menu" class="container invisible">
-			<p id="game-over-label">遊戲結束</p>
+			<p id="game-over-label"><b>GAME OVER!</b></p>
 			<div id="game-over-score-container">
-				<p id="game-over-score-label">分數: 0</p>
+				<p id="game-over-score-label"><b>Score: 0</b></p>
 			</div>
-			<button id="game-over-home-button">主頁</button>
-			<button id="game-over-restart-button">重新開始</button>
+			<button id="game-over-home-button"><b>Menu</b></button>
+			<button id="game-over-restart-button"><b>Restart</b></button>
 		</div>
 	</body>
 </html>
