--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     	<br>
     	<a href="https://yuck.ga/f2048/index.html">Play <b>Furry</b> 2048</a>
     	<br>
+	<a href="https://replit.com/@muffinman12345/FireFox">Open <b>Any Website Opener</b> (may take a while to load)</a>
+	<br>
     	<br>
     <h3>Games</h3>
     	<a href="https://yuck.ga/f2/index.html">Play <b>Flappy Bird</b></a>
