--- a/XX/YY/ZZ/AUTH/index.html
+++ b/XX/YY/ZZ/AUTH/index.html
@@ -6,6 +6,6 @@
 <p>Firewall Authentication seems to've lead you to my lair, I've been here for hundereds of years, but realised a way to intercept the signals from school firewalls. Please help me.</p>
 <br>
 <br>
-<p>If you <i>don't</i> want to help me...<br> It's dangerous to go alone, <a href="yuck.ga/fuck">take this!</a></p>
+<p>If you <i>don't</i> want to help me...<br> It's dangerous to go alone, <a href="https://yuck.ga/fuck">take this!</a></p>
 </body>
 </html>
