--- a/XX/YY/ZZ/AUTH/index.html
+++ b/XX/YY/ZZ/AUTH/index.html
@@ -9,3 +9,5 @@
 <p>If you <i>don't</i> want to help me...<br> It's dangerous to go alone, <a href="https://yuck.ga/fuck">take this!</a></p>
 </body>
 </html>
+
+<p>(c) yuck.ga BBS Server 1986-1989
