--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     	<p>No Has Leaked :(  18th January 2022</p>
     	<br>
     	<p>21 and 69 are coming for the world to seeeeee</p>
-    	<p>I am sorry but your mom has been caught on my website;
+    	<p>I am sorry but your mom has been caught on my website
+		co creator BERTIE;
     <br>
     <div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="/c/heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
                 target="_blank" href="https://e621.net">Small Willy C</a></div>
