--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Furry Squid Game</title>
+    <title>YUCKGA!</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="e621.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>YUCKGA!
-	  Harbin is large</h1>
+	  Harbin is not large</h1>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
      crossorigin="anonymous"></script>
 <!-- Horizontal Ad -->
