--- a/crest/index.html
+++ b/crest/index.html
@@ -4,8 +4,7 @@
 
 <h1>Crest Animation</h1>
 <video width="720" height="1280" autoplay>
-  <source src="IMG" type="video/mov">
-  <source src="movie.ogg" type="video/ogg">
+  <source src="IMG_6597.MOV" type="video/mov">
 Your browser does not support the video tag.
 </video>
 </body>
