--- a/crest/index.html
+++ b/crest/index.html
@@ -3,9 +3,7 @@
 <body>
 
 <h1>Crest Animation</h1>
-<video width="720" height="1280" autoplay>
-  <source src="IMG_6597.MOV" type="video/mov">
-Your browser does not support the video tag.
+<video src="/twomad/IMG_6597.MOV" width="720" height="1280" controls<p>
 </video>
 </body>
 </html>
