--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 	<a href="https://replit.com/@muffinman12345/FireFox">Open <b>Any Website Opener</b> (may take a while to load)</a>
 	<br>
     	<br>
+	<h3>Utilities</h3>
+    	<a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
+    	<br>
+    	<a href="https://yuck.ga/c/index.html">Open <b>Furry</b> Calc</a>
+    	<br>
     <h3>Games</h3>
     	<a href="https://yuck.ga/f2/index.html">Play <b>Flappy Bird</b></a>
     	<br>
@@ -47,16 +52,7 @@
 	<a href="https://bellard.org/jslinux/vm.html?url=win2k.cfg&mem=192&graphic=1&w=1024&h=768">Open Windows 2000 (Works Great on touch screen, just wait around 1 minute the first time)</a>
 	<br>
 	<a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=fedora33-riscv-xwin.cfg&graphic=1&mem=256">Open Fedora Linux 33 (Great, but requires keyboard AND mouse)</a>
-	<br>
-    	<br>
-    <h3>Utilities</h3>
-    	<a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
-    	<br>
-    	<a href="https://yuck.ga/c/index.html">Open <b>Furry</b> Calc</a>
-    	<br>
-    	<img src="mike.png.JPG" alt="Your Browser Couldn't Load This Image - POOR MAN">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
-     crossorigin="anonymous"></script>
+</script>
 <!-- Horizontal Ad -->
 <ins class="adsbygoogle"
      style="display:block"
