--- a/index.html
+++ b/index.html
@@ -7,33 +7,31 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/anime/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="e621.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4429356582033898"
-     crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>YUCKGA!
-	  Harbin is not large</h1>
+	  Picklebin Fleghmcakeob is not large</h1>
 </script>
-    <h3>Sussy Games</h3>  
+    <h3>Yucky Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
     	<br>
-    	<a href="https://yuck.ga/p/index.html">Play <b>Furry</b> Man</a>
+    	<a href="https://yuck.ga/p/index.html">Play <b>Yucky</b> Man</a>
     	<br>
-    	<a href="https://yuck.ga/t/index.html">Play <b>Furry</b> Tetris 1</a>
+    	<a href="https://yuck.ga/t/index.html">Play <b>Yucky</b> Tetris 1</a>
 	<br>
-	<a href="https://yuck.ga/tt/index.html">Play <b>Furry</b> Tetris 2</a>
+	<a href="https://yuck.ga/tt/index.html">Play <b>Yucky</b> Tetris 2</a>
 	<br>
-	<a href="https://yuck.ga/t3/index.html">Play <b>Furry</b> Tetris 3</a>
+	<a href="https://yuck.ga/t3/index.html">Play <b>Yucky</b> Tetris 3</a>
     	<br>
-    	<a href="https://yuck.ga/f2048/index.html">Play <b>Furry</b> 2048</a>
+    	<a href="https://yuck.ga/f2048/index.html">Play <b>Yucky</b> 2048</a>
     	<br>
 	<a href="https://replit.com/@muffinman12345/FireFox">Open <b>Any Website Opener</b> (may take a while to load)</a>
 	<br>
     	<br>
 	<h3>Utilities</h3>
-    	<a href="https://yuck.ga/videos.html">Open <b>Furry</b><i>Tube</i></a>
+    	<a href="https://yuck.ga/videos.html">Open <b>Yuck</b><i>Tube</i></a>
     	<br>
-    	<a href="https://yuck.ga/c/index.html">Open <b>Furry</b> Calc</a>
+    	<a href="https://yuck.ga/c/index.html">Open <b>Yucky</b> Calc</a>
     	<br>
     <h3>Games</h3>
     	<a href="https://yuck.ga/f2/index.html">Play <b>Flappy Bird</b></a>
