--- a/crest/index.html
+++ b/crest/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Crest Animation</h1>
-<video src="/twomad/IMG_6597.MOV" width="720" height="1280" controls<p>
+<video src="https://www.yuck.ga/twomad/IMG_6597.MOV" width="720" height="1280" controls<p>
 </video>
 </body>
 </html>
