--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  Picklebin Fleghmcakeob is not large</h1>
 </script>
     <h3>Yucky Games</h3>  
-    	<a href="https://yuck.ga/f/index.html">Play <b>Furry</b> Bird</a>
+    	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
     	<br>
     	<a href="https://yuck.ga/p/index.html">Play <b>Yucky</b> Man</a>
     	<br>
