--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>YUCKGA!
-	  Creators FREDDIE REEVES AND BERTIE BEAL THE SECOND</h1>
+	  Creators FREDDIE AND BERTIE BEAL THE SECOND</h1>
 </script>
     <h3>Yucky Games</h3>  
     	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
