--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     	<br>
 	<a href="https://replit.com/@muffinman12345/FireFox">Open <b>Any Website Opener</b> (may take a while to load)</a>
 	<br>
+	<a href="https://studio.code.org/projects/minecraft_designer/l4UVD59Rkny2kmWcF-RgrKtHbVZzjObz8FtxfahjqgY/view">Play <b>yuckcraft!</b></a>
+	<br>
     	<br>
 	<h3>Utilities</h3>
     	<a href="https://yuck.ga/videos.html">Open <b>Yuck</b><i>Tube</i></a>
