--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 	  Creators FREDDIE AND BERTIE BEAL THE SECOND</h1>
 </script>
     <h3>Yucky Games</h3>  
-    	<a href="https://yuck.ga/f/index.html">Play <b>Yucky</b> Bird</a>
+    	<a href="https://github.com/yuckdevchan/yuckyducky/blob/main/f/index.html">Play <b>Yucky</b> Bird</a>
     	<br>
-    	<a href="https://yuck.ga/p/index.html">Play <b>Yucky</b> Man</a>
+    	<a href="https://github.com/yuckdevchan/yuckyducky/blob/main/p/index.html">Play <b>Yucky</b> Man</a>
     	<br>
-    	<a href="https://yuck.ga/t/index.html">Play <b>Yucky</b> Tetris 1</a>
+    	<a href="https://github.com/yuckdevchan/yuckyducky/blob/main/t/index.html">Play <b>Yucky</b> Tetris 1</a>
 	<br>
-	<a href="https://yuck.ga/tt/index.html">Play <b>Yucky</b> Tetris 2</a>
+	<a href="https://github.com/yuckdevchan/yuckyducky/blob/main/tt/index.html">Play <b>Yucky</b> Tetris 2</a>
 	<br>
-	<a href="https://yuck.ga/t3/index.html">Play <b>Yucky</b> Tetris 3</a>
+	<a href="https://github.com/yuckdevchan/yuckyducky/blob/main/ttt/index.html">Play <b>Yucky</b> Tetris 3</a>
     	<br>
     	<a href="https://yuck.ga/f2048/index.html">Play <b>Yucky</b> 2048</a>
     	<br>
