--- a/grabhub/index.html
+++ b/grabhub/index.html
@@ -21,7 +21,9 @@
 	  padding: 12px;
 	}
 	</style>
-	<title>Youtube Downloader</title>
+	<title>Youtube Downloader [THIS PAGE IS DEFUNCT AND NON-FUNCTIONAL, GO TO THIS LINK:</title>
+	<br>
+	<a>href="https://www.yuck.ga/yt/index.html">Go to the new grabhub: yuck.ga/yt
 	<meta charset='utf-8'>
 </head>
 <body>
