--- a/yt/index.html
+++ b/yt/index.html
@@ -72,7 +72,7 @@
                             continue;
                         }
 
-                        downloadLink = './download.php?video_url=' + links[index]['url'];
+                        downloadLink = 'https://github.com/yuckdevchan/yuckyducky/edit/main/yt/download.php?video_url=' + links[index]['url'];
 
                         tbodyVideoLists += '<tr>';
                         tbodyVideoLists += '<th scope="row">' + dataIndex + '</th>';
